--- a/hello.html
+++ b/hello.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>你2好</title>
+    <link href="test.css" type="text/css" rel="stylesheet">
 </head>
 <body>
-    <h1>welcome to my web page</h1>
+    
+        <p id="he1"> 你好，世界！！</p>
+
+   
+    <h1 sytle="color:red">welcome to my web page</h1>
     Hello, world! 
 </body>
 </html>
